--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -1,6 +1,7 @@
 /*toegevoegd*/
 html {
     scroll-behavior: smooth;
+    line-height: 1.5em;
 }
 
 /*aangepaast*/
@@ -19,7 +20,9 @@ ul {
 
 /*@media (min-width: 20rem) {*/
 main {
-
+    display: grid;
+    grid-template-rows: auto auto auto auto;
+    grid-row-gap: 3em;
     & hr {
         width: 94%;
 
@@ -47,19 +50,19 @@ input:not(input:checked ~ input)
 
 .sectionUsers{
      display: grid;
-    justify-content: center;
-    align-items: center;
+    /*justify-content: center;*/
+    /*align-items: center;*/
     /*place-items: center;*/
 
 }
 .sectionUsers h2{
-    text-align: center;
+    /*text-align: center;*/
     font-size: 2em;
     font-weight: bold;
     margin-bottom: 1em;
 }
 .sectionUsers p{
-    text-align: center;
+    /*text-align: center;*/
 }
 /*    usrers tablet  toegevoegd*/
 .users{
@@ -76,20 +79,22 @@ dit word hergebruiks users op index en score pagina
 
 /*dit is index*/
 .index-favorite-header{
-    display: flex;
-    text-align: center;
-    flex-direction: column;
+    /*display: flex;*/
+    /*text-align: center;*/
+    /*flex-direction: column;*/
+    margin-left: calc(50% - (80% / 2));
 }
 
 .usersList{
     display: grid;
     grid-template-columns:repeat( auto-fit, minmax(192px, 1fr) ) ;
     /*background-color: #31cfec;*/
-    justify-items: center;  /* Center items horizontally */
-    align-items: center;
-    place-items: center;
+    /*justify-items: center;  !* Center items horizontally *!*/
+    /*align-items: center;*/
+    /*place-items: center;*/
     grid-column-gap: 3em;
-    padding: 2em;
+    /*padding: 2em;*/
+    margin-left: calc(50% - (80% / 2));
 
 }
 .users{
@@ -102,6 +107,7 @@ dit word hergebruiks users op index en score pagina
     grid-template-columns: 1fr;
     height: 181px;
     grid-template-rows: 6em;
+    width: 11em;
     /*repeat( auto-fit, minmax(150px, 1fr) )*/
 
 }
@@ -153,12 +159,12 @@ hergebruiken op de pagina zelf
 .formRatingItem {
     background-color: var(--regent-blue-primary-color);
     display: grid;
-    justify-content: center;
+    /*justify-content: center;*/
 }
 .formRatingItem h2 {
     padding-top: 1em;
     display: grid;
-    place-items: center;
+    /*place-items: center;*/
 }
 /*
 einde hergebruiken op de pagina zelf
@@ -170,12 +176,14 @@ einde hergebruiken op de pagina zelf
     /*display: flex;*/
     /*flex-direction: column;*/
     /*align-items: center;*/
-    margin-left: 2em;
+    /*margin-left: 2em;*/
     padding-top: 1em;
+    /*margin-left: calc(50% - (80% / 2));*/
 }
 .houseInfo h1{
     font-size: 2.5em;
     font-weight: bold;
+
 }
 
 .houseInfo__p{
@@ -214,28 +222,29 @@ einde hergebruiken op de pagina zelf
 .formsRating{
 
     display: grid;
-    justify-content: center;
+    /*justify-content: center;*/
     grid-template-columns: 20em;
-    margin-left: 5em;
-    grid-template-rows: auto auto auto auto;
+    /*margin-left: 5em;*/
+    /*grid-template-rows: auto auto auto auto;*/
+    /*grid-template-columns: auto auto auto;*/
     grid-row-gap: 3em;
 
     margin-bottom: 2em;
-    padding-right: 5em;
+    /*padding-right: 5em;*/
 }
 
 .formRatingItem__header{
-    place-items: center;
+    /*place-items: center;*/
     display: grid;
     /*text-align: center;*/
     /*row-gap: 1em;*/
 }
 .formRatingItem__header p {
-    padding:  1em;
+    /*padding:  1em;*/
 }
 .formRatingItem__header h2{
     display: grid;
-    place-items: center;
+    /*place-items: center;*/
     font-size: 2em;
     font-weight: bold;
 }
@@ -246,7 +255,7 @@ einde hergebruiken op de pagina zelf
     display: grid;
     grid-template-rows: 5em 5em 5em 5em;
     row-gap: 1em;
-    place-items: center;
+    /*place-items: center;*/
 }
 
 .fieldsetRating {
@@ -258,7 +267,7 @@ einde hergebruiken op de pagina zelf
 
 
 .titleRating{
-    text-align: center;
+    /*text-align: center;*/
     font-weight: bold;
 }
 .labelRating:hover{
@@ -270,7 +279,7 @@ einde hergebruiken op de pagina zelf
     content: "★";
     font-size: 2em;
     display: grid;
-    place-items: center;
+    /*place-items: center;*/
 }
 
 .labelRating{
@@ -309,12 +318,12 @@ einde hergebruiken op de pagina zelf
     color: white;
     border-radius: 8px;
     border: none;
-    text-align: center;
+    /*text-align: center;*/
     font-size: 14px;
     width: 7em;
     display: grid;
-    justify-content: center;
-    place-items: center;
+    /*justify-content: center;*/
+    /*place-items: center;*/
     padding: 11px 11px 1em;
     margin-bottom: 1.5em;
 }.NotesForm__button:hover{
@@ -324,8 +333,8 @@ einde hergebruiken op de pagina zelf
 
 /*dit is het einde van de form en daarna de section*/
 .formRatingItem__ratingsShow h2{
-    justify-content: center;
-    justify-self: center;
+    /*justify-content: center;*/
+    /*justify-self: center;*/
     /*place-items: center;*/
 }
 .formRatingItem__ratingsShow{
@@ -333,11 +342,13 @@ einde hergebruiken op de pagina zelf
 }
 .notesForm{
     display: grid;
-    place-items: center;
+    /*place-items: center;*/
 }
+
+
 .show_notes{
     display: grid;
-    place-items: center;
+    /*place-items: center;*/
 }
 .formRatingItem__NoteShow h2{
     padding-top: 0.3em;
@@ -351,15 +362,13 @@ einde hergebruiken op de pagina zelf
     display: grid;
     grid-template-columns:repeat( auto-fit, minmax(214px, 14em) ) ;
     /*background-color: #31cfec;*/
-    justify-items: center;  /* Center items horizontally */
-    align-items: center;
-    place-items: center;
+    /*justify-items: center;  !* Center items horizontally *!*/
+    /*align-items: center;*/
+    /*place-items: center;*/
     grid-column-gap: 3em;
     gap: 43px;
-    place-content: center;
-    justify-content: center;
-    align-items: center;
-    padding: 2em 2em 2em;
+
+    /*padding: 2em 2em 2em;*/
 }
 .usersListscore__li{
     display: grid;
@@ -371,8 +380,10 @@ einde hergebruiken op de pagina zelf
     row-gap: 1em;
     width: 13em;
 
-    place-items: center;
-    place-content: center;
+    /*place-items: center;*/
+
+
+    /*place-content: center;*/
     grid-template-columns: 1fr;
     grid-template-rows: 6em;
     /*repeat( auto-fit, minmax(150px, 1fr) )*/
@@ -411,14 +422,10 @@ einde hergebruiken op de pagina zelf
 
 */
 @media (min-width: 45em) {
-    .formsRating{
-        /*grid-template-columns: repeat( auto-fit, minmax(319px, 1fr) ) ;*/
-        grid-template-columns: auto auto;
-        grid-column-gap: 3em;
-        grid-row-gap: 2em;
-    }
+
+
     .formRatingItem{
-        max-width: 30em;
+        /*max-width: 30em;*/
         width: 19em;
     }
 
@@ -427,48 +434,38 @@ einde hergebruiken op de pagina zelf
         display: grid;
         grid-column-start: 1;
         grid-column-end: 3;
+        grid-row-start: 1;
     }
     .formRatingItem__ratings{
         display: grid;
-        grid-column-start: 1;
+        /*grid-column-start: 2;*/
         grid-row-start: 2;
-        grid-row-end: 2;
-        grid-column-end: 1;
+        grid-column: 1;
+        /*grid-row-end: 2;*/
+        /*grid-column-end: 1;*/
     }
     .formRatingItem__ratings  h2{
         display: grid;
-       justify-content: center;
+       /*justify-content: center;*/
         /*font-size: 1.2em;*/
         font-weight: bold;
     }
     .formRatingItem__ratingsShow{
         display: grid;
-        grid-column-start: 2;
-        grid-row-start: 2;
-        grid-column-end: 2;
+        /*grid-column-start: 2;*/
+        /*grid-row-start: 2;*/
+        /*grid-column-end: 2;*/
         height: 100%;
 
 
     }
-    .formRatingItem__Note{
-        display: grid;
-        grid-column-start: 1;
-        grid-row-start: 4;
-        grid-column-end: 1;
-    }
-    .formRatingItem__NoteShow{
-        display: grid;
-        grid-column-start: 2;
-        grid-row-start: 4;
-        grid-column-end: 2;
 
-    }
 
     .houseInfo__p{
         max-width: 80%;
     }
     .houseImage{
-        /*width:70%;*/
+        width:70%;
     }
 
 
@@ -477,7 +474,39 @@ einde hergebruiken op de pagina zelf
 }
 
 @media (min-width: 1200px) {
-        .orangeLine{
+
+    main{
+        display: grid;
+        grid-template-rows: auto auto auto auto;
+        grid-row-gap: 3em;
+        margin-left: calc(50% - (80% / 2));
+        margin-right: calc(50% - (80% / 2));
+    }
+
+    .formsRating{
+        grid-template-columns: repeat( auto-fit, minmax(319px, 1fr) ) ;
+        /*grid-template-columns: auto auto auto auto;*/
+        grid-column-gap: 3em;
+        grid-row-gap: 2em;
+    }
+
+    .formRatingItem__Note{
+        /*display: grid;*/
+        grid-column-start: 2;
+        grid-row-start: 2;
+        /*grid-column-end: 2;*/
+        /*height: auto;*/
+    }
+    .formRatingItem__NoteShow{
+        /*display: grid;*/
+        grid-column-start: 2;
+        /*grid-row-end : 2;*/
+        grid-row-start: 2;
+
+    }
+
+
+    .orangeLine{
             max-width: 1400px;
         }
 }
