--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -22,6 +22,11 @@ ul {
 main {
     display: grid;
     grid-template-rows: auto auto auto auto;
+
+
+        margin-left: calc(44% - (80% / 2));
+        margin-right: calc(50% - (80% / 2));
+
     grid-row-gap: 3em;
     & hr {
         width: 94%;
@@ -158,12 +163,11 @@ hergebruiken op de pagina zelf
 
 .formRatingItem {
     background-color: var(--regent-blue-primary-color);
-    display: grid;
+    /*display: grid;*/
     /*justify-content: center;*/
 }
 .formRatingItem h2 {
-    padding-top: 1em;
-    display: grid;
+
     /*place-items: center;*/
 }
 /*
@@ -217,17 +221,26 @@ einde hergebruiken op de pagina zelf
     font-weight: bold;
 
 }
+.detailsHouse{
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 1em;
+    row-gap: 1em;
+}
 
 
 .formsRating{
 
     display: grid;
     /*justify-content: center;*/
-    grid-template-columns: 20em;
+    /*grid-template-columns: 16em;*/
     /*margin-left: 5em;*/
     /*grid-template-rows: auto auto auto auto;*/
     /*grid-template-columns: auto auto auto;*/
-    grid-row-gap: 3em;
+
+    grid-column-gap: 2em;
+    grid-row-gap: 2em;
+    max-width: 16em;
 
     margin-bottom: 2em;
     /*padding-right: 5em;*/
@@ -249,7 +262,14 @@ einde hergebruiken op de pagina zelf
     font-weight: bold;
 }
 
-/*hier being het form met de sterren*/
+.formRatingItem__Note{
+    padding: 2em;
+}
+
+
+
+
+    /*hier being het form met de sterren*/
 
 .scorefield{
     display: grid;
@@ -340,22 +360,30 @@ einde hergebruiken op de pagina zelf
 .formRatingItem__ratingsShow{
     height: 15em;
 }
-.notesForm{
+
+.notesScore{
     display: grid;
+    gap: 2em;
+}
+
+
+.notesForm{
+    /*display: grid;*/
     /*place-items: center;*/
 }
 
 
 .show_notes{
-    display: grid;
+    /*display: grid;*/
     /*place-items: center;*/
 }
 .formRatingItem__NoteShow h2{
     padding-top: 0.3em;
 }
-.showscore{
-    height: 27em;
+.formRatingItem__NoteShow{
+    padding: 2em;
 }
+
 
 /*dit is alleen op de score pagina deze class*/
 .usersListScore{
@@ -421,12 +449,31 @@ einde hergebruiken op de pagina zelf
                      yujing toegevoegde media query            *
 
 */
+
+@media (min-width: 500px) {
+    main{
+        margin-left: calc(50% - (80% / 2));
+        margin-right: calc(50% - (80% / 2));
+
+    }
+    .detailsHouse{
+        display: grid;
+        grid-template-columns:5em 11em 11em;
+    }
+
+}
+
 @media (min-width: 45em) {
 
 
+    .detailsHouse{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
     .formRatingItem{
         /*max-width: 30em;*/
         width: 19em;
+        gap: 2em;
     }
 
 
@@ -441,6 +488,7 @@ einde hergebruiken op de pagina zelf
         /*grid-column-start: 2;*/
         grid-row-start: 2;
         grid-column: 1;
+        padding: 2em;
         /*grid-row-end: 2;*/
         /*grid-column-end: 1;*/
     }
@@ -449,6 +497,11 @@ einde hergebruiken op de pagina zelf
        /*justify-content: center;*/
         /*font-size: 1.2em;*/
         font-weight: bold;
+    }
+    .notesScore{
+        display: grid;
+        grid-template-columns: 1fr ;
+        column-gap: 2em;
     }
     .formRatingItem__ratingsShow{
         display: grid;
@@ -475,35 +528,13 @@ einde hergebruiken op de pagina zelf
 
 @media (min-width: 1200px) {
 
-    main{
-        display: grid;
-        grid-template-rows: auto auto auto auto;
-        grid-row-gap: 3em;
-        margin-left: calc(50% - (80% / 2));
-        margin-right: calc(50% - (80% / 2));
-    }
-
     .formsRating{
-        grid-template-columns: repeat( auto-fit, minmax(319px, 1fr) ) ;
+        /*grid-template-columns: repeat( auto-fit, minmax(319px, 1fr) ) ;*/
         /*grid-template-columns: auto auto auto auto;*/
-        grid-column-gap: 3em;
-        grid-row-gap: 2em;
-    }
-
-    .formRatingItem__Note{
-        /*display: grid;*/
-        grid-column-start: 2;
-        grid-row-start: 2;
-        /*grid-column-end: 2;*/
-        /*height: auto;*/
-    }
-    .formRatingItem__NoteShow{
-        /*display: grid;*/
-        grid-column-start: 2;
-        /*grid-row-end : 2;*/
-        grid-row-start: 2;
 
     }
+
+
 
 
     .orangeLine{
