de indeling staat er bijna alleen de details nog

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -297,7 +297,8 @@ main {
   
     & article > ul,li {
       display: block;
-      padding: 3px;
+      /*padding: 3px;*/
+      padding-bottom: 3px;
     }
 
   
