--- a/views/score.ejs
+++ b/views/score.ejs
@@ -176,8 +176,7 @@
             </section>
             <section class=" formRatingItem formRatingItem__NoteShow ">
                 <h2 class="">Uw notitie:</h2>
-                <%- include('partials/showNotes', {result: feedback}); -%>
-
+                <%- include('partials/ShowNotes', {result: feedback}); -%>
             </section>
 
         </div>
