--- a/views/partials/ShowNotes.ejs
+++ b/views/partials/ShowNotes.ejs
@@ -1,14 +1,12 @@
 <ul class="show_notes">
-    <% if (feedback) { %>
+    <% if (feedback && feedback.length > 0) { %>
 
+        <li><%= feedback[feedback.length - 1].note %></li>
 
-        <% feedback.forEach(function(item, index) { %>
-            <p>Item: <%= item.note %></p>
-    <% })
-
-    } else { %>
+    <% } else { %>
         <li>No feedback available.</li>
 
     <% } %>
 </ul>
+
 
