--- a/views/score.ejs
+++ b/views/score.ejs
@@ -9,11 +9,12 @@
         </p>
         <ul>
             <li>ga naar:</li>
-            <li>
+            <li class="animationLink">
                 <a href="#beoordeeling" class="link"> Beoordeel dit huis </a>
             </li>
-            <li>
+            <li class="animationLink">
                 <a href="#users" class="link">Bekijk score teamleden</a></li>
+
         </ul>
 <!--        <hr class="orangeLine">-->
     </section>
