--- a/views/partials/ShowNotes.ejs
+++ b/views/partials/ShowNotes.ejs
@@ -1,10 +1,10 @@
 <ul class="show_notes">
-    <% if (feedback && feedback.length > 0) { %>
+    <% if (feedback.length > 0) { %>
 
         <li><%= feedback[feedback.length - 1].note %></li>
 
     <% } else { %>
-        <li>No feedback available.</li>
+        <li>u hebt nog niks ingevoerd</li>
 
     <% } %>
 </ul>
