--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -187,6 +187,13 @@ hergebruiken op de pagina zelf
 
     /*place-items: center;*/
 }
+
+.formRatingItem__ratings{
+    padding: 2em;
+
+    /*grid-row-end: 2;*/
+    /*grid-column-end: 1;*/
+}
 /*
 einde hergebruiken op de pagina zelf
 */
@@ -296,12 +303,13 @@ einde hergebruiken op de pagina zelf
     text-weight: bold;
     border-color: var(--color-main-text);
     display: flex;
+    width: max-content;
     /*background-color: deepskyblue;*/
 }
 
 
 .titleRating{
-    /*text-align: center;*/
+    text-align: center;
     font-weight: bold;
 }
 .labelRating:hover{
@@ -536,6 +544,7 @@ einde hergebruiken op de pagina zelf
         grid-row-start: 2;
         grid-column: 1;
         padding: 2em;
+
         /*grid-row-end: 2;*/
         /*grid-column-end: 1;*/
     }
