--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <link rel="stylesheet" href="/styles/style.css">
+<!--    <link rel="stylesheet" href="/styles/style.css">-->
+    <link rel="stylesheet" href="/styles/test.css">
     <link rel="stylesheet" href="/assets/font/stylesheet.css">
     <link rel="stylesheet" href="/styles/yujing.css">    <script src="/scripts/scripts.js" type="module" defer></script>
     <script src="/scripts/animation.js" type="module" defer></script>
